@@ -36,7 +36,7 @@ Install the package in R by executing:<br><br>
 
 <br><br>
 
-Note that if only want to embed R in a Scala application, you don't need to install the package.
+Note that if you only want to embed R in a Scala application, you don't need to install the package.
 Simply add the following line to the your SBT <tt>build.sbt</tt> file:<br><br>
 &nbsp; &nbsp; &nbsp; 
 <tt>libraryDependencies += "org.ddahl" % "rscala_2.11" % "VERSION"</tt>
