@@ -6,6 +6,10 @@
     class.
   * Guard elements of the scalaInterpreter from access by the user through the
     '$' operator. 
+  * Removed the 'scalap' function.  Instead of 'scalap(s,"java.lang.System")',
+    use 's$class("java.lang.System")', for example.
+  * Added 'scala' function as a direct copy of 'scalaInterpreter'.  The former
+    is preferred and the latter may be removed in the future.
 
 1.0.13 (2016-07-07)
   * Added %@% operator for shorthand notation (e.g, "interpreter %@% snippet")
